Torrent Integration