@@ -37,7 +37,6 @@ application {
             "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
             "--add-reads=jlibtorrent=java.logging"
     ]
-
 }
 
 dependencies {
@@ -65,41 +64,74 @@ task copyLibjpeg(type: Copy) {
     into "$buildDir/jpackage/EchoVR_Installer/lib/runtime/lib/"
 }
 
-task copyJLibTorrent(type: Copy) {
-    from 'libs'
-    into "$buildDir/jpackage/EchoVR_Installer/bin/libs"
-}
-
-task copyTorrentFiles(type: Copy) {
-    from 'torrentFiles'
-    into "$buildDir/jpackage/EchoVR_Installer/torrentFiles"
-}
+def os = org.gradle.internal.os.OperatingSystem.current()
 
 jlink {
+    options = ['--add-modules', 'jdk.zipfs']
     jpackage {
-        appVersion = '0.4'
         installerName = 'Echo_VR_Installer'
-        def os = org.gradle.internal.os.OperatingSystem.current()
+
         if (os.isWindows()) {
-            icon = 'C:\\Users\\Marcel\\Documents\\Java\\EchoVR_Installer\\icon.ico'
+            appVersion = '0.3'
+            icon = 'icon.ico'  // Update path
+
             installerOptions = [
-                    '--app-version', '0.4',
+                    '--app-version', '0.3',
                     '--vendor', 'bl00dy-c0d3',
                     '--name', 'Echo_VR_Installer',
                     '--install-dir', 'EchoVRInstaller',
-                    '--icon', 'C:\\Users\\Marcel\\Documents\\Java\\EchoVR_Installer\\icon.ico',
+                    '--icon', 'icon.ico',  // Update path
                     '--win-dir-chooser',
                     '--win-shortcut',
                     '--win-menu',
-                    '--win-menu-group', 'EchoVRInstaller'
+                    '--win-menu-group', 'EchoVRInstaller',
+            ]
+        } else if (os.isMacOsX()) {
+            appVersion = '1.3'
+            installerOptions = [
+                    '--mac-package-identifier', 'IhateApple',
             ]
         } else {
-            icon = 'icon.png'
-            tasks.named('jpackage').configure { finalizedBy(copyLibjpeg) }
-            tasks.named('build').configure { dependsOn(jlink) }
+            appVersion = '0.3'
+            icon = 'icon.png'  // Update path if needed
+            // Ensure copyLibjpeg runs after jpackage
+            tasks.named('jpackage').configure {
+                finalizedBy(copyLibjpeg)
+            }
+
+            // Ensure build depends on jlink
+            tasks.named('build').configure {
+                dependsOn(jlink)
+            }
         }
     }
 }
 
+task copyJLibTorrent(type: Copy) {
+    from 'libs'
+    if (os.isWindows()) {
+        into "$buildDir/jpackage/EchoVR_Installer/libs/"
+    } else {
+        into "$buildDir/jpackage/EchoVR_Installer/bin/libs"
+    }
+}
 
-tasks.jlink.finalizedBy(copyJLibTorrent)
+task copyTorrentFiles(type: Copy) {
+    from 'p2pFiles'
+    if (os.isWindows()) {
+        into "$buildDir/jpackage/EchoVR_Installer/p2pFiles/"
+    } else {
+        into "$buildDir/jpackage/EchoVR_Installer/p2pFiles"
+    }
+}
+
+// Ensure copy tasks run after jpackage
+tasks.jpackage {
+    finalizedBy(copyJLibTorrent)
+    finalizedBy(copyTorrentFiles)
+}
+
+// Ensure build depends on jlink
+tasks.named('build').configure {
+    dependsOn(jlink)
+}
